// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerBubble renders correctly 1`] = `
<View
  blue={255}
  green={255}
  highlighted={false}
  red={255}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgb(280, 280, 280)",
        "borderColor": "rgb(255,255,255)",
        "borderRadius": 18,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 0,
        "marginTop": 5,
      },
      {
        "backgroundColor": "papayawhip",
      },
    ]
  }
  testID="player-bubble"
>
  <Text
    blue={255}
    green={255}
    highlighted={false}
    numberOfLines={1}
    red={255}
    style={
      [
        {
          "color": "rgb(255,255,255)",
          "fontWeight": "400",
          "overflow": "hidden",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
        },
      ]
    }
  >
    Professor Poopy Pants
  </Text>
</View>
`;

exports[`PlayerBubble when highlighted is true renders correctly 1`] = `
<View
  blue={255}
  green={255}
  highlighted={true}
  red={255}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(255,255,255)",
        "borderRadius": 18,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 0,
        "marginTop": 5,
      },
      {
        "backgroundColor": "papayawhip",
      },
    ]
  }
  testID="player-bubble"
>
  <Text
    blue={255}
    green={255}
    highlighted={true}
    numberOfLines={1}
    red={255}
    style={
      [
        {
          "color": "white",
          "fontWeight": "400",
          "overflow": "hidden",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
        },
      ]
    }
  >
    Professor Poopy Pants
  </Text>
</View>
`;

exports[`PlayerBubble when isSelected is true renders correctly 1`] = `
<View
  blue={255}
  green={255}
  highlighted={false}
  red={255}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgb(280, 280, 280)",
        "borderColor": "rgb(255,255,255)",
        "borderRadius": 18,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 0,
        "marginTop": 5,
      },
      {
        "backgroundColor": "papayawhip",
      },
    ]
  }
  testID="player-bubble"
>
  <View
    blue={255}
    green={255}
    red={255}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "rgb(255,255,255)",
          "borderRadius": 18,
          "borderWidth": 1,
          "display": "flex",
          "justifyContent": "center",
          "marginBottom": -1,
          "marginLeft": -1,
          "marginRight": -1,
          "marginTop": -1,
          "paddingBottom": 5,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 5,
          "width": 36,
        },
      ]
    }
    testID="player-user-icon"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "rgb(255,255,255)",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    blue={255}
    green={255}
    highlighted={false}
    numberOfLines={1}
    red={255}
    style={
      [
        {
          "color": "rgb(255,255,255)",
          "fontWeight": "400",
          "overflow": "hidden",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
        },
      ]
    }
  >
    Professor Poopy Pants
  </Text>
</View>
`;

exports[`PlayerBubble when isSelected is true when highlighted is true renders correctly 1`] = `
<View
  blue={255}
  green={255}
  highlighted={true}
  red={255}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "rgb(255,255,255)",
        "borderColor": "rgb(255,255,255)",
        "borderRadius": 18,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginLeft": 10,
        "marginRight": 0,
        "marginTop": 5,
      },
      {
        "backgroundColor": "papayawhip",
      },
    ]
  }
  testID="player-bubble"
>
  <View
    blue={255}
    green={255}
    red={255}
    style={
      [
        {
          "alignItems": "center",
          "borderColor": "rgb(255,255,255)",
          "borderRadius": 18,
          "borderWidth": 1,
          "display": "flex",
          "justifyContent": "center",
          "marginBottom": -1,
          "marginLeft": -1,
          "marginRight": -1,
          "marginTop": -1,
          "paddingBottom": 5,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 5,
          "width": 36,
        },
      ]
    }
    testID="player-user-icon"
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "white",
            "fontSize": 20,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    blue={255}
    green={255}
    highlighted={true}
    numberOfLines={1}
    red={255}
    style={
      [
        {
          "color": "white",
          "fontWeight": "400",
          "overflow": "hidden",
          "paddingBottom": 5,
          "paddingLeft": 10,
          "paddingRight": 10,
          "paddingTop": 5,
        },
      ]
    }
  >
    Professor Poopy Pants
  </Text>
</View>
`;
